--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
         body {
-            background: #f1f4f8;
+            background: green;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -109,7 +109,7 @@
         }
         .btn-primary {
             background: #0f172a;
-            color: white;
+            color: cyan;
             border: none;
             box-shadow: 0 12px 24px -10px #0f172a;
         }
@@ -142,7 +142,7 @@
         </div>
 
         <div class="button-group">
-            <button class="btn btn-secondary" id="flipBtn">🔄 Flip to answer</button>
+            <button class="btn btn-secondary" id="flipBtn">🔄 reveal answer</button>
             <button class="btn btn-primary" id="nextBtn">⏩ Next question</button>
         </div>
         <div class="footer-note">🧠 Test yourself daily — history edition</div>
