--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     hintText.textContent = '🤔 think... then flip';
                     flashcard.classList.add('question-mode');
                     flashcard.classList.remove('answer-mode');
-                    flipBtn.textContent = '🔄 Flip to answer';
+                    flipBtn.textContent = '🔄 reveal answer';
                 }
                 counterSpan.textContent = `${currentIndex+1} / ${totalQuestions}`;
             }
