--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
                 {
                     question: "Who wrote 'The Communist Manifesto'?",
                     answer: "Karl Marx and Friedrich Engels"
+                },
+                {
+                    question: "when did ww1 begin",
+                    answer: "1914"
                 }
             ];
 
